fix(Navbar): Prevent section's top part covered by navbar after scroll navigation

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -34,4 +34,5 @@ body {
 
 html {
   font-size: 16px;
+  scroll-padding-top: 4rem;
 }
